intTests/test_type_errors/err028.log.good
 Loading file "err028.saw"
 Parse error at err028.saw:7:16-7:19: Unexpected `Int'
FAILED
